--- a/pages/organizacion.html
+++ b/pages/organizacion.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/nuevo.css">
+        <link rel="stylesheet" href="../css/main.css">
         <title>Predatorians</title>
     </head>
 <body>
@@ -52,7 +52,7 @@
           </div>
         </nav>
         <section>
-            <div class="table">
+            <div class="tables">
                 <h3>Rangos y roles dentro de la casa</h3>
                 <table border="3" cellpadding="5" cellspacing="5">
                     <tr>
@@ -78,7 +78,7 @@
                 </table>
             </div>
                 <h3>Cronograma de eventos</h3>
-            <div class="table">
+            <div class="tables">
                 <table border="3" cellpadding="5" cellspacing="5">
                     <tr>
                         <th>Lunes</th>
@@ -95,7 +95,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="table">
+            <div class="tables">
                 <table border="3" cellpadding="5" cellspacing="5">
                     <tr>
                         <th>Viernes</th>
